--- a/photosite/photos.css
+++ b/photosite/photos.css
@@ -2,7 +2,7 @@ img {
     width: 30%;
     /* margin: 1.6666666%; */
     /* 30 + 30 + 30
-    剩下：10% */
+    left：10% */
     margin: calc(10%/6);
 }
 
